src/test/ui/feature-gate/issue-49983-see-issue-0.stderr
error[E0658]: use of unstable library feature 'dispatch_from_dyn'
  --> $DIR/issue-49983-see-issue-0.rs:4:30
   |
LL | #[allow(unused_imports)] use core::ops::DispatchFromDyn;
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(dispatch_from_dyn)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
